src/objects/Apttus_Config2__ProductFilterView__c.object
<CustomObject>
    <description>represents the filter values for each product in a category</description>
    <fields>
        <fullName>Apttus_Config2__ClassificationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the associated category.</description>
        <inlineHelpText>Id of the associated category.</inlineHelpText>
        <label>Category</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Product Filter Views</relationshipLabel>
        <relationshipName>CategoryFilterViews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FilterFieldName__c</fullName>
        <description>The filter field name.</description>
        <inlineHelpText>The filter field name.</inlineHelpText>
        <label>Filter Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PicklistValues__c</fullName>
        <description>The product pick list values for the corresponding field name.</description>
        <inlineHelpText>The product pick list values for the corresponding field name.</inlineHelpText>
        <label>Picklist Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Product Filter View</label>
    <nameField>
        <displayFormat>PFV-{0000}</displayFormat>
        <label>Product Filter View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Filter Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>